namespace lab6;

public interface IObserver
{
    void Update(ISubject subject);
}